# FlightMetrics

./: .gitignore  README.md  pyproject.toml
flight_metrics/: constants.py  data_manager.py  data_selector.py  flight_selector.py  graph.py  main.py  main_window.py  plot_container.py  pull_data_button.py  range_slider.py  settings.py  state_button.py  style.qss  widget.py
